--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -1,11 +1,23 @@
 <DOCTYPE !html>
 <html>
+  <script>
+    const RapidAPI = new require('rapidapi-connect');
+  </script>
+
   <head>
     <title>A look into U.S. Space Policy</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="spacepolicy.css" />
+  </head>
 
   <body>
+    <div class="timeline"></div>
+    <div class="header"></div>
+    <div class="decade1"></div>
+    <!--insert decades here until current policy-->
+
+    <div class="inputform"></div>
+    <div class="footer"></div>
   </body>
 
 
