--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -1,7 +1,6 @@
 <DOCTYPE !html>
 <html>
   <script>
-    const RapidAPI = new require('rapidapi-connect');
   </script>
 
   <head>
@@ -16,7 +15,12 @@
     <div class="decade1"></div>
     <!--insert decades here until current policy-->
 
-    <div class="inputform"></div>
+    <div class="inputform">
+      <p><strong>Find your local representative here!<strong></p>
+      <input type="text" placeholder="Enter your city or ZIP" required />
+      <button type="submit">Submit</button>
+
+    </div>
     <div class="footer"></div>
   </body>
 
