--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -13,7 +13,15 @@
     <div class="timeline"></div>
     <div class="header"></div>
     <div class="decade1"></div>
-    <!--insert decades here until current policy-->
+    <h1> 1950's </h1> 
+    <h2> October 4, 1957 </h2> 
+    <h3> Sputnik </h3> 
+    <h2> July 29, 1958 </h2> 
+    <h3> National Aeronautics and Space Act of 1958 </h3> 
+    <p> 
+      This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. 
+    </p> 
+    
 
     <div class="inputform">
       <p><strong>Find your local representative here!<strong></p>
