--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -13,17 +13,18 @@
     <div class="timeline"></div>
     <div class="header"></div>
     <div class="decade1"></div>
-    <h1> 1950's </h1> 
-    <h2> October 4, 1957 </h2> 
-    <h3> Sputnik </h3> 
-    <h2> July 29, 1958 </h2> 
-    <h3> National Aeronautics and Space Act of 1958 </h3> 
-    <p> 
-      This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. 
-    </p> 
-    
+    <h1> 1950's </h1>
+    <h2> October 4, 1957 </h2>
+    <h3> Sputnik </h3>
+    <h2> July 29, 1958 </h2>
+    <h3> National Aeronautics and Space Act of 1958 </h3>
+    <p>
+      This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose.
+    </p>
 
-    <div class="inputform">
+
+    <div class="inputform row col-md-4">
+      <h2> Get involved, make a difference. </h2>
       <p><strong>Find your local representative here!<strong></p>
       <input type="text" placeholder="Enter your city or ZIP" required />
       <button type="submit">Submit</button>
