--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -11,11 +11,14 @@
 
   <body>
     <div class="timeline"></div>
-    <div class="header">
-      <h1>A Look Inside United States Space Policy History</h1>
-      <p id="subheader"><em>1950s-present</em></p>
-
+    <img src="spaceheader.jpg" class="img-responsive bgheader" />
+      <div class="header">
+        <h1>A Look Inside United States Space Policy History</h1>
+        <p id="subheader"><em>1950s-present</em></p>
+      </div>
     </div>
+
+
     <div class="decade1"></div>
     <div class="decade1">
     <!-- add decade titles to the sidebar -->
