--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -7,40 +7,40 @@
     <title>A look into U.S. Space Policy</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="spacepolicy.css" />
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
   </head>
 
   <body>
     <div class="timeline"></div>
     <img src="spaceheader.jpg" class="img-responsive bgheader" />
       <div class="header">
-        <h1>A Look Inside United States Space Policy History</h1>
+        <h1>The History of United States Space Policy</h1>
         <p id="subheader"><em>1950s-present</em></p>
       </div>
     </div>
 
-
-    <div class="decade1"></div>
-    <div class="decade1">
+    <div class="fifties well">
     <!-- add decade titles to the sidebar -->
-    <h1> 1950's </h1>
+      <h2 id="fiftyheader"><em>The Beginning of the Space Race</em></h2>
+      <div class="test1">
+        <h3>October 4, 1957</h3>
+        <h4> Sputnik </h4>
+        <p>
+          This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit
+          and burned up in the atmosphere the next year, but marked the beginning of the space race.
+        </p>
+        <img class="img-responsive" src="http://alanwatch.homestead.com/files/nyt_header.jpg" alt="Sputnik newspaper article">
+        <img class="img-responsive" src = "http://www.space.com/images/i/000/022/362/original/sputnik-1-launch-r7.jpg?interpolation%5Cx3dlanczos-none%5Cx26downsize%5Cx3d660:*">
+      </div>
 
-    <h2> October 4, 1957 </h2>
-    <h3> Sputnik </h3>
-    <p>
-      This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit
-      and burned up in the atmosphere the next year, but marked the beginning of the space race.
-    </p>
-    <img class="img-responsive" src="http://alanwatch.homestead.com/files/nyt_header.jpg" alt="Sputnik newspaper article">
-    <img class="img-responsive" src = "http://www.space.com/images/i/000/022/362/original/sputnik-1-launch-r7.jpg?interpolation%5Cx3dlanczos-none%5Cx26downsize%5Cx3d660:*">
-
-    <h2> July 29, 1958 </h2>
-    <h3> National Aeronautics and Space Act of 1958 </h3>
-    <p>
-      This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. NASA was tasked
-      with expanding human knowledge. They were also strictly limited to peaceful operations, so that space would not become
-      the battlefield for World War III. However, this Act was an escalation of the arms race, which had built up after WWII
-      between the United States and the Soviet Union. Read more <a href = "https://en.wikipedia.org/wiki/National_Aeronautics_and_Space_Act"> here </a>
-    </p>
+      <h2> July 29, 1958 </h2>
+      <h3> National Aeronautics and Space Act of 1958 </h3>
+      <p>
+        This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. NASA was tasked
+        with expanding human knowledge. They were also strictly limited to peaceful operations, so that space would not become
+        the battlefield for World War III. However, this Act was an escalation of the arms race, which had built up after WWII
+        between the United States and the Soviet Union. Read more <a href = "https://en.wikipedia.org/wiki/National_Aeronautics_and_Space_Act"> here </a>
+      </p>
     <img class="img-responsive" src="http://www.lbjlibrary.org/assets/uploads/news/nasa.jpg" alt="NASA creation">
     <img class="img-responsive" src="http://solarsystem.nasa.gov/images/galleries/Original_Logo.jpg" alt="Original NASA logo">
     </div>
@@ -56,6 +56,15 @@
 
     </div>
     <div class="footer"></div>
+
+    <div class="w3-display-container mySlides">
+      <img src="spaceheader.jpg" style="width:100%">
+      <div class="w3-display-bottomleft w3-container w3-padding-16 w3-black">
+        Trolltunga, Norway
+      </div>
+    </div>
+
+
   </body>
 
 
