--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -1,10 +1,29 @@
 <DOCTYPE !html>
 <html>
+
   <script>
+  var slideIndex = 1;
+  showDivs(slideIndex);
+
+  function plusDivs(n) {
+    showDivs(slideIndex += n);
+  }
+
+  function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("testimg");
+    if (n > x.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = x.length}
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";
+    }
+    x[slideIndex-1].style.display = "block";
+  }
   </script>
 
   <head>
-    <title>A look into U.S. Space Policy</title>
+    <title>Ace the Space Race</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="spacepolicy.css" />
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
@@ -12,6 +31,7 @@
 
   <body>
     <div class="timeline"></div>
+
     <img src="spaceheader.jpg" class="img-responsive bgheader" />
       <div class="header">
         <h1>The History of United States Space Policy</h1>
@@ -19,18 +39,23 @@
       </div>
     </div>
 
-    <div class="fifties well">
+    <div class="fifties">
     <!-- add decade titles to the sidebar -->
       <h2 id="fiftyheader"><em>The Beginning of the Space Race</em></h2>
       <div class="test1">
-        <h3>October 4, 1957</h3>
-        <h4> Sputnik </h4>
+        <h3><strong>October 4, 1957</strong></h3>
+        <h4><strong></em>Sputnik</em></strong></h4>
         <p>
           This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit
           and burned up in the atmosphere the next year, but marked the beginning of the space race.
         </p>
-        <img class="img-responsive" src="http://alanwatch.homestead.com/files/nyt_header.jpg" alt="Sputnik newspaper article">
-        <img class="img-responsive" src = "http://www.space.com/images/i/000/022/362/original/sputnik-1-launch-r7.jpg?interpolation%5Cx3dlanczos-none%5Cx26downsize%5Cx3d660:*">
+
+        <div class="w3-content w3-display-container">
+          <img class="img-responsive testimg" src="http://alanwatch.homestead.com/files/nyt_header.jpg" alt="Sputnik newspaper article">
+          <img class="img-responsive testimg" src = "http://www.space.com/images/i/000/022/362/original/sputnik-1-launch-r7.jpg?interpolation%5Cx3dlanczos-none%5Cx26downsize%5Cx3d660:*">
+          <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
+          <a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
+        </div>
       </div>
 
       <h2> July 29, 1958 </h2>
@@ -56,14 +81,6 @@
 
     </div>
     <div class="footer"></div>
-
-    <div class="w3-display-container mySlides">
-      <img src="spaceheader.jpg" style="width:100%">
-      <div class="w3-display-bottomleft w3-container w3-padding-16 w3-black">
-        Trolltunga, Norway
-      </div>
-    </div>
-
 
   </body>
 
