--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -30,21 +30,21 @@
   </head>
 
   <body>
-    <div class="timeline"></div>
+    <div class="timeline">
 
     <img src="spaceheader.jpg" class="img-responsive bgheader" />
       <div class="header">
         <h1>The History of United States Space Policy</h1>
         <p id="subheader"><em>1950s-present</em></p>
       </div>
-    </div>
+    </div> 
 
     <div class="fifties">
     <!-- add decade titles to the sidebar -->
       <h2 id="fiftyheader"><em>The Beginning of the Space Race</em></h2>
       <div class="test1">
         <h3><strong>October 4, 1957</strong></h3>
-        <h4><strong></em>Sputnik</em></strong></h4>
+        <h4><strong><em>Sputnik</em></strong></h4>
         <p>
           This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit
           and burned up in the atmosphere the next year, but marked the beginning of the space race.
@@ -71,11 +71,33 @@
     </div>
     <div class="decade2">
     <h1> 1960's </h1>
+      <h2> May 1961 to February 1962 <\h2>
+    <h3> Race to Space for the U.S <\h3>
+    <p>
+      President Kennedy declares the American Space objective to put a man on the moon and return them safely before the
+      decade ends. On February 20, 1962, John Glenn became the first American to orbit Earth, completing three orbits. 
+    <\p>
+    <\div> 
+    <div class="decade3"> 
+      <h1> 1970's </h1>
     </div>
+    <div class="decade4">
+    <h1> 1980's </h1> 
+    </div>
+    <div class="decade5">
+    <h1> 1990's </h1> 
+    </div>
+    <div class="decade6">
+    <h1> 2000's </h1> 
+    </div>
+    <div class="decade7">
+    <h1> 2010's </h1> 
+    </div>
+   
 
     <div class="inputform row col-md-4">
       <h2> Get involved, make a difference. </h2>
-      <p><strong>Find your local representative here!<strong></p>
+      <p><strong>Find your local representative here!</strong></p>
       <input type="text" placeholder="Enter your city or ZIP" required />
       <button type="submit">Submit</button>
 
