--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -71,13 +71,13 @@
     </div>
     <div class="decade2">
     <h1> 1960's </h1>
-      <h2> May 1961 to February 1962 <\h2>
-    <h3> Race to Space for the U.S <\h3>
+      <h2> May 1961 to February 1962 </h2>
+    <h3> Race to Space for the U.S </h3>
     <p>
       President Kennedy declares the American Space objective to put a man on the moon and return them safely before the
       decade ends. On February 20, 1962, John Glenn became the first American to orbit Earth, completing three orbits. 
-    <\p>
-    <\div> 
+    </p>
+    </div> 
     <div class="decade3"> 
       <h1> 1970's </h1>
     </div>
