--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -30,56 +30,195 @@
   </head>
 
   <body>
-    <div class="timeline"></div>
+    <div class="timeline">
+      <ul class ="w3-navbar w3-black">
+        <li><a class="w3-hover-red"href="#">Home</a></li>
+        <li><a href="#">1950s</a></li>
+        <li><a href="#">1960s</a></li>
+        <li><a href="#">1970s</a></li>
+        <li><a href="#">1980s</a></li>
+        <li><a href="#">1990s</a></li>
+        <li><a href="#">2000s-present</a></li>
+        <li><a href="#">About Us</a></li>
 
-    <img src="spaceheader.jpg" class="img-responsive bgheader" />
-      <div class="header">
-        <h1>The History of United States Space Policy</h1>
-        <p id="subheader"><em>1950s-present</em></p>
-      </div>
     </div>
 
-    <div class="fifties">
-    <!-- add decade titles to the sidebar -->
-      <h2 id="fiftyheader"><em>The Beginning of the Space Race</em></h2>
-      <div class="test1">
-        <h3><strong>October 4, 1957</strong></h3>
-        <h4><strong></em>Sputnik</em></strong></h4>
-        <p>
-          This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit
-          and burned up in the atmosphere the next year, but marked the beginning of the space race.
-        </p>
+    <img src="spaceheader.jpg" class="img-responsive bgheader" />
+    <div class="header">
+      <h1>The History of United States Space Policy</h1>
+      <p id="subheader"><em>1950s-present</em></p>
+    </div>
 
-        <div class="w3-content w3-display-container">
-          <img class="img-responsive testimg" src="http://alanwatch.homestead.com/files/nyt_header.jpg" alt="Sputnik newspaper article">
-          <img class="img-responsive testimg" src = "http://www.space.com/images/i/000/022/362/original/sputnik-1-launch-r7.jpg?interpolation%5Cx3dlanczos-none%5Cx26downsize%5Cx3d660:*">
-          <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
-          <a class="w3-btn-floating w3-display-right" onclick="plusDivs(1)">&#10095;</a>
+<!-- 1950-1959 -->
+    <div class="decades w3-row">
+      <h2 id="timeheader"><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
         </div>
       </div>
 
-      <h2> July 29, 1958 </h2>
-      <h3> National Aeronautics and Space Act of 1958 </h3>
-      <p>
-        This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. NASA was tasked
-        with expanding human knowledge. They were also strictly limited to peaceful operations, so that space would not become
-        the battlefield for World War III. However, this Act was an escalation of the arms race, which had built up after WWII
-        between the United States and the Soviet Union. Read more <a href = "https://en.wikipedia.org/wiki/National_Aeronautics_and_Space_Act"> here </a>
-      </p>
-    <img class="img-responsive" src="http://www.lbjlibrary.org/assets/uploads/news/nasa.jpg" alt="NASA creation">
-    <img class="img-responsive" src="http://solarsystem.nasa.gov/images/galleries/Original_Logo.jpg" alt="Original NASA logo">
-    </div>
-    <div class="decade2">
-    <h1> 1960's </h1>
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+          <p><p>
+            This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. NASA was tasked
+            with expanding human knowledge. They were also strictly limited to peaceful operations, so that space would not become
+            the battlefield for World War III. However, this Act was an escalation of the arms race, which had built up after WWII
+            between the United States and the Soviet Union. Read more <a href = "https://en.wikipedia.org/wiki/National_Aeronautics_and_Space_Act"> here </a>
+          </p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
     </div>
 
-    <div class="inputform row col-md-4">
-      <h2> Get involved, make a difference. </h2>
-      <p><strong>Find your local representative here!<strong></p>
-      <input type="text" placeholder="Enter your city or ZIP" required />
-      <button type="submit">Submit</button>
+<!-- 1960-1969 -->
+    <div class="decades w3-row">
+      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
 
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
     </div>
+
+<!-- 1970-1979 -->
+    <div class="decades w3-row">
+      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
+    </div>
+
+<!-- 1980-1989 -->
+    <div class="decades w3-row">
+      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
+    </div>
+
+<!-- 1990-1999 -->
+    <div class="decades w3-row">
+      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+
+<!-- 2000s & beyond -->
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
+    </div>
+
+    <div class="decades w3-row">
+      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <div class="event50acontainer">
+        <div class="event50a w3-container w3-threequarter">
+          <h2><strong>Sputnik</strong></h2>
+          <p>October 4, 1957</p>
+          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+
+      <div class="event50bcontainer">
+        <div class="event50b w3-container w3-threequarter">
+          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
+          <p>July 29, 1958</p>
+        </div>
+        <div class="event50aa w3-container w3-quarter">
+          <h2><strong>Test</strong></h2>
+        </div>
+      </div>
+      <div class="event50c"></div>
+    </div>
+
+  <div class="inputform w3-center">
+    <h2><strong>Get involved, make a difference.</strong></h2>
+    <p><strong>Register your email address to get more information!<strong></p>
+    <input type="text" placeholder="E-mail address" required />
+    <button type="submit">Submit</button>
+  </div>
+  <img src="spacefooter.jpg" class="img-responsive footimg" />
+
     <div class="footer"></div>
 
   </body>
