--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -66,7 +66,7 @@
       <h2 id="timeheader"><em>The Beginning of the Space Race</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>Sputnik</strong></h2>
+          <h2><strong>The Launch of Sputnik 1</strong></h2>
           <p>October 4, 1957</p>
           <p>The Soviet Union surprises the world and plunges Americans into
             paranoia as the world’s first artificial satellite orbits the Earth.
@@ -84,11 +84,15 @@
         <div class="event50b w3-container w3-threequarter">
           <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
           <p>July 29, 1958</p>
-          <p><p>
-            This act created the National Aeronautics and Space Administration (NASA), and outlined their purpose. NASA was tasked
-            with expanding human knowledge. They were also strictly limited to peaceful operations, so that space would not become
-            the battlefield for World War III. However, this Act was an escalation of the arms race, which had built up after WWII
-            between the United States and the Soviet Union. Read more <a href = "https://en.wikipedia.org/wiki/National_Aeronautics_and_Space_Act"> here </a>
+          <p>The National Aeronautics and Space Act enacted during the
+            Eisenhower presidency created the administration bearing the same
+            name in response to incapability of solely the United States
+            military to keep up with the space race against the Soviets. The
+            newly formed agency aimed to preserve the role of the United States
+            as a leader in aeronautical and space science and technology, to
+            develop and operate vehicles capable of carrying instruments,
+            equipment, supplies and living organisms through space, and to
+            expand human knowledge of phenomena in the atmosphere and space.
           </p>
         </div>
         <div class="event50aa w3-container w3-quarter">
@@ -106,7 +110,7 @@
       <p>1960</p>
     </div>
     <div class="decades w3-row" id="sixties">
-      <h2 id="timeheader" class=""><em>A Nation Destined for Greatness</em></h2>
+      <h2 id="timeheader" class=""><em>Americans Reach for the Stars</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
           <h2><strong>The Space Race Begins</strong></h2>
@@ -139,7 +143,7 @@
       <p>1970</p>
     </div>
     <div class="decades w3-row" id="seventies">
-      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <h2 id="timeheader" class=""><em>Testing the Boundaries of Innovation</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
           <h2><strong>Sputnik</strong></h2>
@@ -172,7 +176,7 @@
       <p>1980</p>
     </div>
     <div class="decades w3-row" id="eighties">
-      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <h2 id="timeheader" class=""><em>The Space Shuttle Era</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
           <h2><strong>Sputnik</strong></h2>
@@ -203,7 +207,7 @@
       <p>1990</p>
     </div>
     <div class="decades w3-row" id="nineties">
-      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <h2 id="timeheader" class=""><em>A Home Among the Stars</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
           <h2><strong>Sputnik</strong></h2>
@@ -235,7 +239,7 @@
       <p>2000</p>
     </div>
     <div class="decades w3-row" id="present">
-      <h2 id="timeheader" class=""><em>The Beginning of the Space Race</em></h2>
+      <h2 id="timeheader" class=""><em>Interstellar Ambitions</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
           <h2><strong>Sputnik</strong></h2>
