--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -52,7 +52,7 @@
     <img src="spaceheader.jpg" class="img-responsive bgheader" />
     <div class="header">
       <h1><strong>The History of United States Space Policy</strong></h1>
-      <p id="subheader"><em>1950s-present HELLO!!</em></p>
+      <p id="subheader"><em>1950s-present</em></p>
     </div>
 
 <!-- 1950-1959 -->
