--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -110,12 +110,20 @@
       <p>1960</p>
     </div>
     <div class="decades w3-row" id="sixties">
-      <h2 id="timeheader" class=""><em>Americans Reach for the Stars</em></h2>
+      <h2 id="timeheader" class=""><em>"We choose to go to the Moon"</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>The Space Race Begins</strong></h2>
-          <p>May 25, 1961</p>
-          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+          <h2><strong>President Kennedy's Call to Action</strong></h2>
+          <p>September 12, 1962</p>
+          <p>Following a series of triumphs from the Soviet Union’s space
+            program, then President John F. Kennedy gave a speech in an attempt
+            to persuade the American public to support the national effort to
+            land a man on the Moon and return him safely to Earth. This specific
+            goal and direction united the country to put forth the best and the
+            brightest in order to achieve this goal. From coast to coast,
+            Americans took pride in their efforts to bring a man to the Moon by
+            the end of the decade, and it was ultimately this dedication that
+            allowed for its successful fruition.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -124,9 +132,15 @@
 
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
-          <p>July 29, 1958</p>
-        </div>
+          <h2><strong>"One small step for man, one giant leap for mankind."</strong></h2>
+          <p>July 21, 1969</p>
+          <p>On July 21, 1969 at 2:56 UTC, Neil Armstrong became the first
+            human to step onto another celestial body, the Moon. This
+            achievement was a result of the culmination of years of work from
+            American scientists and engineers and effectively ended the space
+            race. Apollo 11 was the first of many successful missions to the
+            Moon and a milestone for manned spaceflight.</p>
+          </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
         </div>
@@ -253,8 +267,14 @@
 
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
-          <p>July 29, 1958</p>
+          <h2><strong>"One small step for man, one giant leap for mankind."</strong></h2>
+          <p>July 21, 1969</p>
+          <p>On July 21, 1969 at 2:56 UTC, Neil Armstrong became the first
+            human to step onto another celestial body, the Moon. This
+            achievement was a result of the culmination of years of work from
+            American scientists and engineers and effectively ended the space
+            race. Apollo 11 was the first of many successful missions to the
+            Moon and a milestone for manned spaceflight.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
