--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -160,9 +160,15 @@
       <h2 id="timeheader" class=""><em>Testing the Boundaries of Innovation</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>Sputnik</strong></h2>
-          <p>October 4, 1957</p>
-          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+          <h2><strong>Skylab</strong></h2>
+          <p>May 14, 1973</p>
+          <p>The United States began to solidify its place amongst the stars
+            when it launched its first space station in 1973. Weighing over
+            170,000 pounds, it was placed into a low Earth orbit where it was
+            the home to many experiments especially in the realm of crew
+            survival and solar observations. This project is known as the
+            precursor to the International Space Station. Following six years
+            in orbit, it re-entered the atmosphere in a spectacular fashion.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -171,8 +177,16 @@
 
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
-          <p>July 29, 1958</p>
+          <h2><strong>Launch of the Voyager Program</strong></h2>
+          <p>August 20 & September 5, 1958</p>
+          <p>Voyager 1 and 2 were both launched in 1977 with the intent to
+            flyby the outer planets of the Solar System and following the
+            completion of their respective objectives, both probes continued
+            flying through space eventually reaching interstellar space. To
+            date, Voyager 1 has travelled over 20 billion miles and is now the
+            farthest spacecraft from Earth. Despite this extreme distance, both
+            Voyager 1 and 2 regularly communicate with NASA and are expected to
+            remain operational until 2025.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
