added windows fonts

--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="spacepolicy.css" />
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   </head>
 
   <body>
