--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -208,9 +208,16 @@
       <h2 id="timeheader" class=""><em>The Space Shuttle Era</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>Sputnik</strong></h2>
-          <p>October 4, 1957</p>
-          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+          <h2><strong>Launch of the Space Shuttle</strong></h2>
+          <p>April 12, 1981</p>
+          <p>The United States continued on its promise to remain the leader
+            in spaceflight as it introduced a reusable low Earth orbital
+            spacecraft system that would later become a recognizable flagship
+            for the American space program. Six total orbiters were constructed
+            following the loss of the Challenger in 1986 and Columbia in 2003.
+            The remaining orbiters include Enterprise, Discovery, Atlantis, and
+            Endeavour. The Space Shuttle continued to be the American space
+            travel workhorse until the program’s conclusion in 2011.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -218,8 +225,14 @@
       </div>
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
-          <p>July 29, 1958</p>
+          <h2><strong>Galileo probe</strong></h2>
+          <p>October 18, 1989</p>
+          <p>Galileo was an unmanned space probe launched at the end of the
+            decade which aimed to study Jupiter and its moons. It was launched
+            via Space Shuttle Atlantis and arrived within Jupiter’s vicinity
+            6 years ilater in December 1995. This probe observed the
+            magnetosphere, atmospheric conditions of Jupiter and the plasma
+            interactions from Io’s volcanism and Jupiter’s atmosphere.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
