--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -52,7 +52,7 @@
 
     <img src="spaceheader.jpg" class="img-responsive bgheader" />
     <div class="header">
-      <h1><strong>The History of United States Space Policy</strong></h1>
+      <h1><strong>The History of United States Spaceflight</strong></h1>
       <p id="subheader"><em>1950s-present</em></p>
     </div>
 
@@ -252,9 +252,16 @@
       <h2 id="timeheader" class=""><em>A Home Among the Stars</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>Sputnik</strong></h2>
-          <p>October 4, 1957</p>
-          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+          <h2><strong>International Space Station</strong></h2>
+          <p>1998</p>
+          <p>The International Space Station (ISS) had its first component
+            launched into orbit in 1998 and was under construction until 2011
+            when the final main component (Leonard) was delivered and attached
+            to the station. It is the product of an international coalition who
+            aim to use the station as a space environment research laboratory
+            that conducts experiments in the fields of (human) biology. physics,
+            astronomy, meteorology among others. The ISS is scheduled to continue
+            operating until 2024.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -262,8 +269,16 @@
       </div>
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>National Aeronautics and Space Act of 1958</strong></h2>
-          <p>July 29, 1958</p>
+          <h2><strong>Hubble Space Telescope</strong></h2>
+          <p>May 20, 1990</p>
+          <p>The Hubble Space Telescope (HST) is one of the largest and most
+            versatile space telescope. Originally launched in 1990, the telescope
+            didn’t reach its full capability until 1993 when corrective optics
+            were installed to address blurry images as a result of a incorrectly
+            shaped mirror. The HST has been credited with providing the most
+            detailed visible light images, and providing a deep view into space
+            which have led to breakthroughs in astrophysics such as determining
+            the rate of expansion of the Universe.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -281,12 +296,18 @@
       <p>2000</p>
     </div>
     <div class="decades w3-row" id="present">
-      <h2 id="timeheader" class=""><em>Interstellar Ambitions</em></h2>
+      <h2 id="timeheader" class=""><em>New Challenges for a New Century</em></h2>
       <div class="event50acontainer">
         <div class="event50a w3-container w3-threequarter">
-          <h2><strong>Sputnik</strong></h2>
-          <p>October 4, 1957</p>
-          <p>This was the launch of the world's first artificial satellite into orbit by the Soviet Union. The satellite fell out of orbit and burned up in the atmosphere the next year, but marked the beginning of the space race.</p>
+          <h2><strong>End of Space Shuttle Era</strong></h2>
+          <p>July 8, 2011</p>
+          <p>The era of the Space Shuttle came to an end in 2011 with the final
+            flight STS-135 with Atlantis. At the conclusion of the mission, all
+            the remaining orbiters were distributed across the United States for
+            preservation in various museums. To date, NASA is currently in the
+            process of developing a new launch system that will once again be
+            able to transport astronauts to the International Space Station and
+            beyond. </p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
@@ -295,14 +316,14 @@
 
       <div class="event50bcontainer">
         <div class="event50b w3-container w3-threequarter">
-          <h2><strong>"One small step for man, one giant leap for mankind."</strong></h2>
-          <p>July 21, 1969</p>
-          <p>On July 21, 1969 at 2:56 UTC, Neil Armstrong became the first
-            human to step onto another celestial body, the Moon. This
-            achievement was a result of the culmination of years of work from
-            American scientists and engineers and effectively ended the space
-            race. Apollo 11 was the first of many successful missions to the
-            Moon and a milestone for manned spaceflight.</p>
+          <h2><strong>Rise of Commercialized Spaceflight</strong></h2>
+          <p>The new century has also allowed for the private enterprises to
+            enter the realm of spaceflight. SpaceX and Blue Origin are seen as
+            the two main players in filling the gap left behind by NASA’s
+            conclusion of the Space Shuttle program. The emergence of privatized
+            flight ushers in a new era of innovation including reusability,
+            next generation construction materials and the potential for manned
+            spaceflight beyond the Moon.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
           <h2><strong>Test</strong></h2>
