added footer features

--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -335,14 +335,21 @@
 
   <div class="inputform w3-center" id="about">
     <h2><strong>Get involved, make a difference.</strong></h2>
-    <p><strong>Register your email address to get more information!<strong></p>
-    <input type="text" placeholder="E-mail address" required />
-    <button type="submit">Submit</button>
+    <p>America has paved the way for spaceflight across numerous decades. At a
+      time when our nation is falling behind in science, technology mathematical
+      prowess, we need to commit to education reform to allow our children the
+      greatest chance for success in a technology-driven world, and to more
+      public funds for research and development.</p>
+    <p>Contact your local representative and tell them you support American
+      spaceflight, research and education. Demand that we act in the best
+      interests of our nation by funding the programs that ensure we continue
+      leading the way on breakthrough innovation.</p>
+    <a class="w3-btn w3-text-shadow w3-round-xlarge w3-indigo" href="http://www.house.gov/htbin/findrep" target="_blank">Contact my Representative</a>
   </div>
   <img src="spacefooter.jpg" class="img-responsive footimg" />
 
   <div class="footer w3-container w3-center">
-    <p>Coded within 24 hours at HackDavis 2017 in Davis, California.</p>
+    <p>Coded within 24 hours at <a href="http://www.hackdavis.io" target="_blank">HackDavis 2017</a> in Davis, California.</p>
   </div>
 
   </body>
