--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -39,8 +39,9 @@
 
   <body>
     <div class="timeline">
+      <div id="top"></div>
       <ul class ="w3-navbar w3-black">
-        <li><a class="w3-hover-blue"href="#">HOME</a></li>
+        <li><a class="w3-hover-blue"href="#top">HOME</a></li>
         <li><a href="#year50">1950s</a></li>
         <li><a href="#year60">1960s</a></li>
         <li><a href="#year70">1970s</a></li>
@@ -77,7 +78,6 @@
             superpowers that united the country in an effort to reach the stars.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
         </div>
       </div>
 
@@ -97,7 +97,8 @@
           </p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <!-- <h2><strong>Test</strong></h2> -->
+          <img src="NASA_logo.svg.png" class="img-responsive" style="margin-top: -75px"/>
         </div>
       </div>
     </div>
@@ -127,7 +128,7 @@
             allowed for its successful fruition.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <iframe style="margin-top: 45px" width="auto" height="auto" src="https://www.youtube.com/embed/WZyRbnpGyzQ" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -143,8 +144,7 @@
             Moon and a milestone for manned spaceflight.</p>
           </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
-        </div>
+            <iframe style="margin-top: 35px" width="auto" height="auto" src="https://www.youtube.com/embed/RMINSD7MmT4" frameborder="0" allowfullscreen></iframe>        </div>
       </div>
       <div class="event50c"></div>
     </div>
