--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -172,7 +172,7 @@
             in orbit, it re-entered the atmosphere in a spectacular fashion.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="skylab.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:200px" />
         </div>
       </div>
 
@@ -190,7 +190,7 @@
             remain operational until 2025.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="voyager.jpg" class="img-responsive" style="border-radius:10px; width:200px; height:150px; margin-top: 35px" />
         </div>
       </div>
       <div class="event50c"></div>
@@ -220,7 +220,7 @@
             travel workhorse until the program’s conclusion in 2011.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <iframe style="margin-top: 45px" width="auto" height="auto" src="https://www.youtube.com/embed/OnoNITE-CLc" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
       <div class="event50bcontainer">
@@ -235,7 +235,7 @@
             interactions from Io’s volcanism and Jupiter’s atmosphere.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="galileo.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
         </div>
       </div>
       <div class="event50c"></div>
@@ -264,7 +264,8 @@
             operating until 2024.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="iss.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top:0 px" />
+
         </div>
       </div>
       <div class="event50bcontainer">
@@ -281,7 +282,8 @@
             the rate of expansion of the Universe.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="hubble.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top:0 px" />
+
         </div>
       </div>
       <div class="event50c"></div>
@@ -310,7 +312,8 @@
             beyond. </p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="spaceshuttle.png" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
+
         </div>
       </div>
 
@@ -326,7 +329,7 @@
             spaceflight beyond the Moon.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <h2><strong>Test</strong></h2>
+          <img src="spacex.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:250px; margin-top: 10px" />
         </div>
       </div>
       <div class="event50c"></div>
@@ -335,17 +338,18 @@
 
   <img src="spacefooter.jpg" class="img-responsive footimg" />
   <div class="inputform w3-center" id="about">
-    <h2><strong>Get involved, make a difference.</strong></h2>
-    <p>America has paved the way for spaceflight across numerous decades. At a
-      time when our nation is falling behind in science, technology mathematical
-      prowess, we need to commit to education reform to allow our children the
-      greatest chance for success in a technology-driven world, and to more
-      public funds for research and development.</p>
-    <p>Contact your local representative and tell them you support American
-      spaceflight, research and education. Demand that we act in the best
-      interests of our nation by funding the programs that ensure we continue
-      leading the way on breakthrough innovation.</p>
-    <a class="w3-btn w3-text-shadow w3-round-xlarge w3-indigo" href="http://www.house.gov/htbin/findrep" target="_blank">Contact my Representative</a>
+    <h2><strong>Interested in STEM?</strong></h2>
+    <p>As the United States government decreases spending on space exploration,
+      it is more important than ever that the public spirit of curiosity is
+      preserved. The private space industry is working to push limits in a way
+      that hasn’t happened since the first moon walk of the 1960’s. To work in
+      this transformative movement, young students will need skills in
+      engineering, science, and technology.</p>
+    <p>Are you excited to become part of the space race? We urge you to pursue
+      Science, Technology, Engineering, and Math (STEM) courses, and push your
+      enthusiasm beyond the classroom. If you reside in NorCal, check out the
+      NorCal STEM Education Foundation for more opportunities. </p>
+    <a class="w3-btn w3-text-shadow w3-round-xlarge w3-indigo" href="http://www.sacstemfair.org/welcome.html" target="_blank">Learn more about NorCal STEM Fair 2017!</a>
   </div>
 
   <div class="footer w3-container w3-center">
