--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -235,7 +235,7 @@
             interactions from Io’s volcanism and Jupiter’s atmosphere.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="galileo.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
+          <img src="galileo.JPG" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
         </div>
       </div>
       <div class="event50c"></div>
