--- a/spacepolicy.html
+++ b/spacepolicy.html
@@ -98,7 +98,7 @@
         </div>
         <div class="event50aa w3-container w3-quarter">
           <!-- <h2><strong>Test</strong></h2> -->
-          <img src="NASA_logo.svg.png" class="img-responsive" style="margin-top: -75px"/>
+          <img id="" src="NASA_logo.svg.png" class="img-responsive" style="margin-top: -75px"/>
         </div>
       </div>
     </div>
@@ -172,7 +172,7 @@
             in orbit, it re-entered the atmosphere in a spectacular fashion.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="skylab.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:200px" />
+          <img id="resource"  src="skylab.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:200px" />
         </div>
       </div>
 
@@ -190,7 +190,7 @@
             remain operational until 2025.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="voyager.jpg" class="img-responsive" style="border-radius:10px; width:200px; height:150px; margin-top: 35px" />
+          <img id="resource"  src="voyager.jpg" class="img-responsive" style="border-radius:10px; width:200px; height:150px; margin-top: 35px" />
         </div>
       </div>
       <div class="event50c"></div>
@@ -235,7 +235,7 @@
             interactions from Io’s volcanism and Jupiter’s atmosphere.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="galileo.JPG" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
+          <img id="resource" src="galileo.JPG" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
         </div>
       </div>
       <div class="event50c"></div>
@@ -264,7 +264,7 @@
             operating until 2024.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="iss.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top:0 px" />
+          <img id="resource" src="iss.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top:0 px" />
 
         </div>
       </div>
@@ -282,7 +282,7 @@
             the rate of expansion of the Universe.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="hubble.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top:0 px" />
+          <img id="resource" src="hubble.jpg" class="img-responsive" style="border-radius:25px; width:200px; height:200px; margin-top: 35px" />
 
         </div>
       </div>
@@ -312,7 +312,7 @@
             beyond. </p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="spaceshuttle.png" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
+          <img id="" src="spaceshuttle.png" class="img-responsive" style="border-radius:10px; width:auto; height:auto; margin-top: 25px" />
 
         </div>
       </div>
@@ -329,7 +329,7 @@
             spaceflight beyond the Moon.</p>
         </div>
         <div class="event50aa w3-container w3-quarter">
-          <img src="spacex.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:250px; margin-top: 10px" />
+          <img id="resource" src="spacex.jpg" class="img-responsive" style="border-radius:10px; width:auto; height:250px; margin-top: 10px" />
         </div>
       </div>
       <div class="event50c"></div>
